# intomath

./: .gitignore  README.md  intomath.db  test_problem.txt
backend/: .env.example  geogebra_commands.json  geogebra_embeddings.pkl  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  health.py  solve.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  problem_attempt.py  solver_run.py  visualization_artifact.py
backend/app/integrations/: __init__.py  llama_client.py  local_deepseek_ocr.py  ollama_client.py  openrouter_client.py
backend/app/schemas/: __init__.py  common.py  geometry_dsl.py  solve.py
backend/app/services/: __init__.py  cache.py  fallback_solver.py  geogebra_translator.py  geometry_extractor.py  llama_trivia_solver.py  local_solver_selector.py  local_solver_types.py  model_router.py  ocr_service.py  solver_service.py
backend/scripts/: test_openrouter_model.py
backend/tests/: test_fallback_solver.py  test_geogebra_translator.py  test_geometry_extractor.py  test_llama_trivia_solver.py  test_local_solver_selector.py  test_model_router.py  test_openrouter_client.py  test_refinements.py  test_solve_schema.py  test_solver_service_local_first.py
docs/: API.md  ARCHITECTURE.md  SETUP.md
frontend/: package.json  react-katex.d.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/lib/: api-client.ts  utils.ts
frontend/stores/: solve-workspace.ts
(+24 files in other folders)
